force-app/main/default/objects/Lead/fields/AEOfTerritory__c.field-meta.xml
<CustomField>
    <fullName>AEOfTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AE linked to the territory of the account</description>
    <label>AE attached to Territory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>