force-app/main/default/objects/Lead/fields/BusinessReviewSegment__c.field-meta.xml
<CustomField>
    <fullName>BusinessReviewSegment__c</fullName>
    <label>Business Review Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountSegment</valueSetName>
    </valueSet>
</CustomField>