force-app/main/default/objects/Lead/fields/DisqualificationReason__c.field-meta.xml
<CustomField>
    <fullName>DisqualificationReason__c</fullName>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyst/Media</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Company too small</fullName>
            </value>
            <value>
                <fullName>Long-term Contract with Competitor</fullName>
            </value>
            <value>
                <fullName>Left the Company</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Other (specify)</fullName>
            </value>
            <value>
                <fullName>Spammer/Bad data</fullName>
            </value>
            <value>
                <fullName>Partner/Agency</fullName>
            </value>
            <value>
                <fullName>Not in Target Geography</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>