force-app/main/default/objects/Lead/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>Domain of the accoun</description>
    <label>Domain</label>
    <type>Url</type>
</CustomField>