force-app/main/default/objects/Lead/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geography</valueSetName>
    </valueSet>
</CustomField>