force-app/main/default/objects/Lead/fields/InsideSalesOfTerritory__c.field-meta.xml
<CustomField>
    <fullName>InsideSalesOfTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDR attached to the territory of the account</description>
    <label>SDR attached to Territory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>