force-app/main/default/objects/Lead/fields/LeadIdForMapping__c.field-meta.xml
<CustomField>
    <fullName>LeadIdForMapping__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadIdForMapping</label>
    <type>Text</type>
</CustomField>