force-app/main/default/objects/Lead/fields/LeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceDetail__c</fullName>
    <description>Custom field representing the original lead source detail</description>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Champify</fullName>
            </value>
            <value>
                <fullName>Clicktale</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>GainSight</fullName>
            </value>
            <value>
                <fullName>Marketing referral</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Paid Email</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>G2</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Deal Reg</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>In App</fullName>
            </value>
            <value>
                <fullName>Client referral</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Personal Contact</fullName>
            </value>
            <value>
                <fullName>Cognism</fullName>
            </value>
            <value>
                <fullName>Datanyze</fullName>
            </value>
            <value>
                <fullName>IKO</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>LinkedIn Navigator</fullName>
            </value>
            <value>
                <fullName>Lusha</fullName>
            </value>
            <value>
                <fullName>Zoominfo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>