force-app/main/default/objects/Lead/fields/MeetingBookedDate__c.field-meta.xml
<CustomField>
    <fullName>MeetingBookedDate__c</fullName>
    <label>Meeting Booked Date</label>
    <type>Date</type>
</CustomField>