force-app/main/default/objects/Lead/fields/PartnerReferral__c.field-meta.xml
<CustomField>
    <fullName>PartnerReferral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the name of the Partner in case of Partner Referral</description>
    <label>Partner Referral</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Partner Accounts can be added as referral partners.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PartnerAccount</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Leads</relationshipLabel>
    <relationshipName>ReferralLeads</relationshipName>
    <type>Lookup</type>
</CustomField>