force-app/main/default/objects/Lead/fields/PartnerSalesOfTerritory__c.field-meta.xml
<CustomField>
    <fullName>PartnerSalesOfTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Sales linked to the Territory of the Account</description>
    <label>Partner Sales attached to Territory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>