force-app/main/default/objects/Lead/fields/PrimarySegment__c.field-meta.xml
<CustomField>
    <fullName>PrimarySegment__c</fullName>
    <label>Primary Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountSegment</valueSetName>
    </valueSet>
</CustomField>