force-app/main/default/objects/Lead/fields/ProductInterests__c.field-meta.xml
<CustomField>
    <fullName>ProductInterests__c</fullName>
    <label>Product Interest(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>aaaaaa</fullName>
            </value>
            <value>
                <fullName>bbbbbb</fullName>
            </value>
            <value>
                <fullName>ccccccc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>