force-app/main/default/objects/Lead/fields/QualificationComment__c.field-meta.xml
<CustomField>
    <fullName>QualificationComment__c</fullName>
    <description>Qualification results</description>
    <label>Meeting Qualification comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>