force-app/main/default/objects/Lead/fields/RecycleNurturingReason__c.field-meta.xml
<CustomField>
    <fullName>RecycleNurturingReason__c</fullName>
    <label>Recycle / Nurturing Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No fit</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>Company too small</fullName>
            </value>
            <value>
                <fullName>Engaged in active sales cycle</fullName>
            </value>
            <value>
                <fullName>Future Interest Indicated</fullName>
            </value>
            <value>
                <fullName>No interest/need</fullName>
            </value>
            <value>
                <fullName>Unable to reach</fullName>
            </value>
            <value>
                <fullName>Need more internal alignment</fullName>
            </value>
            <value>
                <fullName>Prefer Competitor</fullName>
            </value>
            <value>
                <fullName>No Recent Sales Engagement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>