force-app/main/default/objects/Lead/fields/RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account linked to the lead</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>