force-app/main/default/objects/Lead/fields/RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact linked to the lead</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>