force-app/main/default/objects/Lead/fields/SessionByMonth__c.field-meta.xml
<CustomField>
    <fullName>SessionByMonth__c</fullName>
    <description>Session/month</description>
    <label>Session/month</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>