force-app/main/default/objects/Lead/recordTypes/SalesLead.recordType-meta.xml
<RecordType>
    <fullName>SalesLead</fullName>
    <active>true</active>
    <businessProcess>Sales Lead</businessProcess>
    <description>Used to track Prospect or Customer qualification</description>
    <label>Sales Lead</label>
</RecordType>