force-app/main/default/objects/Lead/validationRules/CountryValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CountryValidationRule</fullName>
    <active>true</active>
    <description>Mandates the population of the Country Field</description>
    <errorConditionFormula>AND(ISBLANK(Country),!$Permission.ByPassVR)</errorConditionFormula>
    <errorDisplayField>Country</errorDisplayField>
    <errorMessage>Please populate the Lead Country</errorMessage>
</ValidationRule>