force-app/main/default/objects/Lead/validationRules/LeadSourceDetailNotAllowedAtUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSourceDetailNotAllowedAtUpdate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()) ,
 $Permission.ByPassVR = false,
ISCHANGED(  LeadSourceDetail__c  ))</errorConditionFormula>
    <errorDisplayField>LeadSourceDetail__c</errorDisplayField>
    <errorMessage>At lead update, you can only modify the lead source detail recent</errorMessage>
</ValidationRule>