force-app/main/default/objects/Lead/validationRules/LeadSourceNotAllowedAtUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSourceNotAllowedAtUpdate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()) ,
 $Permission.ByPassVR = false,
ISCHANGED( LeadSource__c ))</errorConditionFormula>
    <errorDisplayField>LeadSource__c</errorDisplayField>
    <errorMessage>At lead update, you can only modify the lead source recent</errorMessage>
</ValidationRule>