force-app/main/default/objects/Lead/validationRules/PartnerReferralEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>PartnerReferralEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>$Permission.ByPassVR = false &amp;&amp;
NOT(ISNEW()) &amp;&amp;
NOT(ISPICKVAL(LeadSource, &quot;Partner&quot;)) &amp;&amp;
NOT(isblank(PartnerReferral__c ))</errorConditionFormula>
    <errorDisplayField>PartnerReferral__c</errorDisplayField>
    <errorMessage>Partner Referral must be empty if the most recent lead source is not linked to Partner</errorMessage>
</ValidationRule>