force-app/main/default/objects/Lead/validationRules/PartnerReferralMandatoryAtCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>PartnerReferralMandatoryAtCreation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
 $Permission.ByPassVR = false,
ISBLANK( PartnerReferral__c ),
ISPICKVAL(  LeadSource__c , &quot;Partner&quot;))</errorConditionFormula>
    <errorDisplayField>PartnerReferral__c</errorDisplayField>
    <errorMessage>A Partner Referral is mandatory in case of Partner lead source</errorMessage>
</ValidationRule>