force-app/main/default/objects/Lead/validationRules/PartnerReferralMandatoryAtUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>PartnerReferralMandatoryAtUpdate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNEW()) ,
 $Permission.ByPassVR = false,
ISBLANK( PartnerReferral__c ),
ISPICKVAL(   LeadSource  , &quot;Partner&quot;))</errorConditionFormula>
    <errorDisplayField>PartnerReferral__c</errorDisplayField>
    <errorMessage>A Partner Referral is mandatory in case of Partner lead source recent</errorMessage>
</ValidationRule>