force-app/main/default/objects/Lead/validationRules/PreventDisqualifiedToBeModified.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventDisqualifiedToBeModified</fullName>
    <active>true</active>
    <description>The status Disqualified can&apos;t be change anymore.</description>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    ISPICKVAL(PRIORVALUE(Status), &quot;Disqualified&quot;),
$Permission.ByPassVR = false
)</errorConditionFormula>
    <errorMessage>You can&apos;t change the status Disqualified.</errorMessage>
</ValidationRule>