force-app/main/default/objects/Lead/validationRules/RequireDisqualificationReason.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireDisqualificationReason</fullName>
    <active>true</active>
    <description>A Disqualification reason is mandatory</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Disqualified&quot;),
    NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Disqualified&quot;)),
    ISBLANK(TEXT(DisqualificationReason__c)),
    NOT($Permission.ByPassVR)
)</errorConditionFormula>
    <errorMessage>A disqualification reason is mandatory.</errorMessage>
</ValidationRule>