force-app/main/default/objects/Lead/validationRules/RequireRecycleReason.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireRecycleReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &quot;Recycle / Nurturing&quot;),
NOT(ISPICKVAL(PRIORVALUE(Status), &quot;Recycle / Nurturing&quot;)),
ISBLANK(TEXT(RecycleNurturingReason__c)),
NOT($Permission.ByPassVR)
)</errorConditionFormula>
    <errorMessage>A Recycle reason is mandatory.</errorMessage>
</ValidationRule>