force-app/main/default/objects/Lead/validationRules/RequireSalesQualificationComment.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireSalesQualificationComment</fullName>
    <active>true</active>
    <description>The Sales Qualification Comment field should be completed if the first meeting date has been indicated.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(MeetingBookedDate__c)),
    ISBLANK(QualificationComment__c),
$Permission.ByPassVR = false
)</errorConditionFormula>
    <errorMessage>The Sales Qualification comment is mandatory.</errorMessage>
</ValidationRule>