force-app/main/default/objects/Lead/validationRules/RestrictUpdationOfRegionAndGeograph.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictUpdationOfRegionAndGeograph</fullName>
    <active>true</active>
    <description>Restricts updation of Region and Geography if Country is not updated</description>
    <errorConditionFormula>AND
( 
     OR(ISCHANGED(Geography__c), ISCHANGED(Region__c)),
     !ISCHANGED(Country),
     !$Permission.ByPassVR
)</errorConditionFormula>
    <errorMessage>You can&apos;t update Region/Geography.</errorMessage>
</ValidationRule>